--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -511,6 +511,7 @@ methodical ,/adj./@有条理的;,/adj./@有条不紊的;,/adj./@井然有序的;
 meticulous ,/adj./@非常仔細的;,/adj./@一絲不苟的;,/adj./@小心翼翼的;
 microphone ,/n./@麥克風;,/n./@話筒;,/n./@擴音器;
 microscope ,/n./@显微镜;
+militarism ,/n./@軍國主義;
 millennium ,/n./@千禧年;,/n./@千年期;,/n./@太平盛世;,/n./@黃金時代;
 millilitre ,/n./@毫升;
 millimetre ,/n./@毫米;
@@ -663,6 +664,7 @@ refraction ,/n./@折射;
 regularity ,/n./@规则性;,/n./@整齐;
 regulation ,/n./@規則;,/n./@法令;,/n./@管理;
 regulatory ,/adj./@管理的;
+relativism ,/n./@相對主義;
 relinquish ,/v./@放棄;
 reluctance ,/n./@不願;,/n./@勉强;
 remarkable ,/adj./@卓越的;,/adj./@非凡的;,/adj./@值得注意的;
@@ -735,6 +737,7 @@ stepfather ,/n./@继父;
 stepmother ,/n./@继母;
 stigmatize ,/vt./@污名化;,/vt./@诬蔑;,/vt./@汙辱;
 stochastic ,/adj./@隨機的;,/adj./@猜測的;
+stupendous ,/adj./@驚人的;,/adj./@了不起的;,/adj./@令人驚嘆的;
 subjective ,/adj./@主观的;
 subliminal ,/adj./@潛意識的;
 submission ,/n./@归顺;,/n./@提交;,/n./@呈送;
