--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -48,6 +48,7 @@ cannibalism ,/n./@同類相食;,/n./@食人;,/n./@吃人;
 cannibalize ,/vt./@拆取...的部件;,/vt./@食(同類)...的肉;,/vt./@減少...的銷量;,/vt./@調撥...的人員;
 carnivorous ,/adj./@食肉的;
 categorical ,/adj./@絕對的;,/adj./@明确的;,/adj./@斷言的;
+Catholicism ,/n./@天主教教義;,/n./@天主教;,/n./@天主教信仰;,/n./@天主教教會;
 celebration ,/n./@庆祝;
 centrifugal ,/adj./@離心的;
 certificate ,/n./@证书;,/vt./以证书@授权;,/vt./以证书@批准;
@@ -70,6 +71,7 @@ commandment ,/n./@戒条;,/n./@戒律;,/n./@命令;
 commemorate ,/v./@紀念;
 commentator ,/n./@評論者;,/n./@評論員;,/n./@解说员;,/n./@注釋者;,/n./@評註者;
 communicate ,/v./@交流;
+communistic ,/adj./@共產主義的;
 compartment ,/n./@隔间;,/n./@隔室;,/n./@区划;,/n./@客房;
 competition ,/n./@竞争;
 competitive ,/adj./@竞争的;
@@ -107,6 +109,7 @@ continental ,/adj./@大陸的;,/adj./@大陸性的;,/adj./@歐洲大陸的;,/adj
 contingency ,/n./@事故;,/n./@意外;,/n./@应急措施;
 continuance ,/n./@繼續;
 contraction ,/n./@收縮;,/n./@緊縮;,/n./@縮短;
+contractual ,/adj./@契約的;,/adj./@合同的;
 contraption ,/n./@奇怪裝置;,/n./@奇怪機器;,/n./@奇怪機械;
 contributor ,/n./@贡献@者;
 controversy ,/n./@争论;,/n./@辩论;
@@ -286,6 +289,7 @@ manufactory ,/n./@工厂;
 manufacture ,/n./@制造;
 marketplace ,/n./@市場;,/n./@集市;
 masterpiece ,/n./@杰作;
+materialism ,/n./@唯物主義;,/n./@實利主義;
 mathematics ,/n./@数学;
 meaningless ,/adj./@无意义的;
 measurement ,/n./@测量;,/n./@度量;
@@ -305,6 +309,7 @@ molestation ,/n./@騷擾;,/n./@性騷擾;,/n./@猥褻;
 multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
 Neanderthal ,/n./@尼安德特人;,/adj./@尼安德特人的;
+necessitate ,/vt./@需要;,/vt./@迫使;
 Neitherland ,/n./@荷兰;,/n./@尼德兰;
 nightmarish ,/adj./@噩夢般的;,/adj./@惡夢般的;,/adj./@夢魘般的;
 nonchalance ,/n./@冷淡;
@@ -314,9 +319,10 @@ notoriously ,/adv./@眾所周知地;
 objectivity ,/n./@客觀性;,/n./@客觀;
 observation ,/n./@观察;,/n./@监视;
 obstruction ,/n./@障碍;,/n./@阻碍;
+ontological ,/adj./@本體論的;,/adj./@實體論的;
 opportunity ,/n./@機會;,/n./@機遇;,/n./@時機;
 organically ,/adv./@有機地;,/adv./@以有機方式地;,/adv./@有機體地;,/adv./@器官性地;
-orientation ,/n./@定向;,/n./@傾向性;
+orientation ,/n./@定向;,/n./@傾向性;,/n./@方位;,/n./@取向;
 orthography ,/n./@正字法;,/n./@拼寫法;
 oscillation ,/n./@震盪;,/n./@振動;,/n./@擺動;
 outstanding ,/adj./@杰出的;,/adj./@出类拔萃的;
