--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -113,6 +113,7 @@ exploitation ,/n./@開發;,/n./@利用;,/n./@開採;,/n./@剝削;
 extravagance ,/n./@奢侈;,/n./@浪費;
 Gemeinschaft ,/n./@社區;,/n./@團體;,/n./@社團;,/n./@集體;
 geometrician ,/n./@幾何學家;
+geopolitical ,/adj./@地緣政治的;,/adj./@地緣政治學的;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
 Gesellschaft ,/n./@社會;,/n./@團體;,/n./@社團;,/n./@協會;,/n./@聚會;,/n./@集會;,/n./@組織;,/n./@機構;
 hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
@@ -253,6 +254,7 @@ surveillance ,/n./@监视;
 suspiciously ,/adv./@怀疑地;
 technologist ,/n./@技術專家;,/n./@技術人員;,/n./@工藝學家;
 togetherness ,/n./@團結友愛;,/n./@和睦相處;,/n./@親密無間;
+totalitarian ,/adj./@極權主義的;,/n./@極權主義者;
 transcendent ,/adj./@超常的;,/adj./@傑出的;,/adj./@超然的;,/adj./@卓越的;,/adj./@超越一切的;
 translucence ,/n./@半透明;
 translucency ,/n./@半透明;
