--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -26,12 +26,13 @@ comprehension ,/n./@理解;
 comprehensive ,/adj./@综合的;,/adj./@广泛的;,/adj./@全面的;
 concatenation ,/n./@連結;,/n./@串聯;
 concentration ,/n./@專心;,/n./@聚焦;
+conceptualize ,/vt./@概念化;
 condescending ,/adj./@謙遜的;,/adj./@屈尊的;
 configuration ,/n./@配置;,/n./@结构;
 conflagration ,/n./@大火;,/n./@大火災;
 confrontation ,/n./@冲突;,/n./@对抗;,/n./@對峙;
 congressional ,/adj./@会议的;,/adj./@国会的;
-conscientious ,/adj./@勤勤懇懇的;,/adj./@良心的;,/adj./@煞費苦心的;
+conscientious ,/adj./@勤勤懇懇的;,/adj./@良心的;,/adj./@煞費苦心的;,/adj./@認真的;,/adj./@盡心盡責的;,/adj./@一絲不苟的;,/adj./@兢兢業業的;
 consciousness ,/n./@知覺;
 consideration ,/n./@考慮;,/n./@照顧;
 constellation ,/n./@星座;,/n./@星辰;,/n./@星群;,/n./@荟萃;,/n./@兴奋丛;
@@ -49,6 +50,7 @@ demonstrative ,/adj./@指示的;,/adj./@感情外露的;,/n./@指示詞;
 deterioration ,/n./@惡化;,/n./@退化;,/n./@墮落;
 determination ,/n./@决心;
 deterministic ,/adj./@決定論的;
+differentiate ,/vt./@區分;,/vt./@區別;,/vt./@鑑別;,/vt./@差異化;
 discretionary ,/adj./@任意的;,/adj./@自由决定的;
 disfiguration ,/n./@毁容;,/n./@畸形;
 distinguished ,/n./@卓越的;
@@ -96,6 +98,7 @@ misunderstood ,/v./@误解;,/v./@误会;
 monochromatic ,/adj./@單色的;
 morphogenetic ,/adj./@形態生成的;
 multicultural ,/adj./@多元文化的;
+multinational ,/adj./@多國的;,/adj./@跨國的;,/n./@跨國公司;,/n./@跨國企業;
 neighbourhood ,/n./@街坊;,/n./@邻近地区;
 ornamentation ,/n./@裝飾;
 parallelogram ,/n./@平行四邊形;
@@ -103,6 +106,7 @@ participation ,/n./@参与;,/n./@分享;,/n./@参股;
 perfectionism ,/n./@完美主義;
 perfectionist ,/n./@完美主義者;
 perpendicular ,/n./@垂线;
+petrochemical ,/adj./@石油化學的;,/n./@石油化學製品;
 physiotherapy ,/n./@物理療法;
 precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
