--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -948,7 +948,7 @@ slop ,/v./@溢出;
 slot ,/n./@位置;,/n./@狹槽;,/n./@水溝;
 slow ,/adj./@慢的;
 slum ,/n./@貧民窟;
-slur ,/v./@咕噥;,/vt./@含糊;
+slur ,/v./@咕噥;,/vt./@含糊;,/n./@詆毀;,/n./@侮辱;
 slut ,/n./@母狗;,/n./@蕩婦;
 smog ,/n./@煙霧;
 smug ,/adj./@自鳴得意的;
