--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -427,7 +427,7 @@ erode ,/v./@腐蝕;
 error ,/n./@錯誤;
 essay ,/n./@散文;,/n./@論文;,/n./@小品文;
 ether ,/n./@乙醚;,/n./@以太;,/n./@醚;,/n./@蒼穹;
-ethic ,/adj./@道德的;
+ethic ,/adj./@道德的;,/adj./@倫理的;
 ethos ,/n./@精神特質;,/n./@價值理念;,/n./@性格氣質;,/n./@價值觀;,/n./@道德思想;,/n./@道德觀;,/n./@信條;
 ethyl ,/n./@乙基;
 evade ,/v./@逃脫;,/vt./@躲避;,/vt./@逃避;,/vt./@迴避;
@@ -455,6 +455,7 @@ fatal ,/adj./@致命的;
 fault ,/n./@錯誤;,/n./@過錯;
 favor ,/n./@贊成;,/n./@喜愛;,/n./@好感;
 feast ,/n./@盛宴;
+feign ,/vt./@假裝;,/vt./@裝作;
 femme ,/n./@妻子;,/n./@婦女;,/adj./@嬌柔的;
 fence ,/n./@柵欄;,/n./@圍欄;,/n./@籬笆;
 feral ,/adj./@野生的;,/adj./@野性的;,/adj./@野獸的;
@@ -736,6 +737,7 @@ lycee ,/n./@國立高等學校;
 lymph ,/n./@淋巴;,/n./@淋巴液;
 lynch ,/n./@私刑;,/v./@私刑處死;
 lyric ,/n./@歌詞;,/n./@抒情詩;
+macho ,/adj./@大男子氣概的;
 madam ,/n./@夫人;,/n./@太太;,/n./@女士;
 mafia ,/n./@黑手黨;
 magic ,/n./@魔術;
