--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -350,7 +350,7 @@ corner ,/n./@角落;
 corpse ,/n./@屍體;
 corpus ,/n./@語料庫;,/n./@文集;,/n./@本金;
 cortex ,/n./@皮质;,/n./@皮层;,/n./@树皮;,/n./@果皮;
-cosmic ,/adj./@宇宙的;
+cosmic ,/adj./@宇宙的;,/adj./@天大的;,/adj./@浩瀚的;,/adj./@無限的;
 cosmos ,/n./@宇宙;,/n./@世界;
 cotton ,/n./@棉;
 county ,/n./@縣;,/n./@郡;
@@ -1615,6 +1615,7 @@ unless ,/prep./@除非;
 unload ,/v./@卸貨;
 unlock ,/v./@解鎖;,/v./@開啓;
 unreal ,/adj./@不眞實的;
+unrest ,/n./@動亂;,/n./@動盪;,/n./@不安;,/n./@不安定;
 unroll ,/vt./@展開;,/vt./@鋪開;,/vt./@展現;
 unseen ,/vt./@未看見的;,/vt./@看不見的;
 unsung ,/adj./@未唱的;,/adj./@埋沒的;
