--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -140,6 +140,7 @@ bathroom ,/n./@浴室;
 bedazzle ,/v./@吸引;
 behavior ,/n./@行为;
 benedict ,/v./@祝福;
+bequeath ,/vt./@遺贈;,/vt./@傳續;
 betrayal ,/n./@背叛;
 beverage ,/n./@飲料;
 billiard ,/adj./@台球的;
@@ -246,7 +247,7 @@ complain ,/v./@投诉;
 complete ,/adj./@完全的;
 compound ,/v./@合成;,/v./@混合;,/v./@和解;,/n./@化合物;,/n./@混合物;,/adj./@複合的;,/adj./@混合的;
 compress ,/v./@压缩;
-comprise ,/v./@包含;,/v./@构成;
+comprise ,/v./@包含;,/vt./@包括;,/vt./@構成;
 computer ,/n./@电脑;
 conceive ,/v./@怀孕;
 conclave ,/n./@秘密会议;,/n./@教皇选举会议;
@@ -296,7 +297,7 @@ credence ,/n./@可信性;,/n./@相信;,/n./@祭器臺;
 crescent ,/n./@新月形;,/n./@新月;,/n./@新月狀物;,/n./@新月形街道;,/adj./@新月形的;,/adj./@逐漸增長的;
 criminal ,/n./@罪犯;
 criteria ,/n./@標準;,/n./@條件;
-critical ,/adj./@批评的;,/adj./@批判的;
+critical ,/adj./@批评的;,/adj./@批判的;,/adj./@批判性的;
 critique ,/n./@評論;,/n./@批評;,/vt./@評論;
 crockery ,/n./@陶器;,/n./@瓷器;
 crucible ,/n./@坩堝;,/n./@嚴峻考驗;
@@ -634,7 +635,7 @@ hysteric ,/adj./@亢奮的;
 identify ,/v./@鉴定;,/v./@认出;,/v./@认同;
 identity ,/n./@身份;
 ideology ,/n./@意識形態;,/n./@思想意識;,/n./@觀念學;
-idolatry ,/n./@偶像崇拜;
+idolatry ,/n./@偶像崇拜;,/n./@盲目崇拜;
 ignorant ,/adj./@愚昧的;
 illusion ,/n./@幻觉;
 imminent ,/adj./@迫近的;,/adj./@临近的;,/adj./@迫在眉睫的;,/adj./@即将来临的;,/adj./@即将发生的;,/adj./@即将作出的;
@@ -647,6 +648,7 @@ imposter ,/n./@冒充者;,/n./@冒名頂替者;
 impunity ,/n./@免受懲處;,/n./@不受懲罰;
 impurity ,/n./@雜質;,/n./@不純;,/n./@不潔;,/n./@不純之物;
 inactive ,/adj./@不活跃的;,/adj./@不活动的;,/adj./@怠惰的;,/adj./@暂停的;
+inchoate ,/adj./@剛開始的;,/adj./@初步的;,/adj./@不完全的;,/adj./@未完的;,/adj./@未發展完善的;
 incident ,/n./@事件;
 incision ,/n./@切口;,/n./@切開;,/n./@切入;,/n./@切割;,/n./@雕刻;
 increase ,/v./@增加;
@@ -913,6 +915,7 @@ paranoid ,/adj./@偏執狂的;,/adj./@患妄想症的;,/n./@偏執狂患者;
 parasite ,/n./@寄生虫;,/n./@寄生生物;
 particle ,/n./@颗粒;
 passerby ,/n./@路人;
+Passover ,/n./@逾越節;
 passport ,/n./@护照;
 password ,/n./@密码;
 paternal ,/adj./@父親的;
@@ -994,7 +997,7 @@ property ,/n./@性质;,/n./@财产;,/n./@特性;,/n./@屬性;,/n./@道具;
 prophecy ,/n./@預言;
 prophesy ,/n./@預言;
 proposal ,/n./@提议;
-prospect ,/n./@前景;,/v./@勘探;
+prospect ,/n./@前景;,/v./@勘探;,/n./@指望;,/n./@預期;,/n./@前途;
 prostate ,/n./@前列腺;
 protocol ,/n./@協議;,/n./@礼节;,/n./@条约草案;,/n./@议定书;
 prudence ,/n./@謹慎;
