--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -276,7 +276,7 @@ criterion ,/n./@标准;
 criticize ,/v./@批评;
 crocodile ,/n./@鳄鱼;
 crossfire ,/n./@交叉火力;,/n./@激烈交锋;
-crossover ,/n./@交叉;,/n./@交叉點;,/n./@穿越;
+crossover ,/n./@交叉;,/n./@交叉點;,/n./@穿越;,/n./@轉型;,/n./@轉型者;,/adj./@轉型的;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
 cryogenic ,/adj./@低溫學的;,/adj./@深凍冷藏的;
@@ -364,7 +364,7 @@ dismantle ,/v./@拆除;,/v./@解散;,/v./@取消;
 dismissal ,/n./@解雇;
 disorient ,/vt./@使失去方向;,/vt./@使迷惘;
 disparage ,/vt./@貶低;,/vt./@毀謗;
-disparity ,/n./@不同;,/n./@懸殊;
+disparity ,/n./@不同;,/n./@懸殊;,/n./@不平等;,/n./@不等;,/n./@差異;
 dispersal ,/n./@分散;,/n./@传播;,/n./@散布;,/n./@疏散;,/n./@消失;
 disregard ,/v./@忽视;,/v./@不尊重;
 dissenter ,/n./@反对者;,/n./@异议者;
@@ -806,6 +806,7 @@ pedophile ,/redirected./@target="paedophile";
 penetrate ,/v./@渗透;,/v./@穿透;,/v./@貫穿;
 peninsula ,/n./@半島;
 pentagram ,/n./@五角星;,/n./@五角星形;
+perdition ,/n./@萬劫不復;,/n./@毀滅;,/n./@地獄;
 perimeter ,/n./@周長;,/n./@周界;
 periphery ,/n./@圓周;,/n./@周圍;,/n./@外围;,/n./@次要位置;,/n./@次要部分;,/n./@體表;,/n./@末梢;
 permanent ,/adj./@持久的;,/adj./@永恒的;
@@ -838,6 +839,7 @@ plication ,/n./@褶皺;,/n./@皺紋;
 pluralism ,/n./@多元化;
 pneumatic ,/adj./@氣體的;,/adj./@空氣的;,/adj./@充氣的;,/adj./@壓縮空氣推動的;,/adj./@氣動的;
 poisonous ,/adj./@有毒的;
+politburo ,/n./@政治局;
 political ,/adj./@政治的;
 pollution ,/n./@污染;
 polygraph ,/n./@測謊儀;,/n./@測謊機;
@@ -1057,6 +1059,7 @@ supremacy ,/n./@霸權;,/n./@優勢;
 surcharge ,/n./@附加費;,/n./@額外費;
 surrender ,/v./@投降;
 suspicion ,/n./@怀疑;
+sweatshop ,/n./@血汗工廠;,/n./@剝削勞力的工廠;
 symbiosis ,/n./@共生;
 synagogue ,/n./@犹太教堂;
 syntactic ,/adj./@句法的;
