--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -511,6 +511,7 @@ methodical
 meticulous
 microphone
 microscope
+militarism
 millennium
 millilitre
 millimetre
@@ -663,6 +664,7 @@ refraction
 regularity
 regulation
 regulatory
+relativism
 relinquish
 reluctance
 remarkable
@@ -735,6 +737,7 @@ stepfather
 stepmother
 stigmatize
 stochastic
+stupendous
 subjective
 subliminal
 submission
