--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -48,6 +48,7 @@ cannibalism
 cannibalize
 carnivorous
 categorical
+Catholicism
 celebration
 centrifugal
 certificate
@@ -70,6 +71,7 @@ commandment
 commemorate
 commentator
 communicate
+communistic
 compartment
 competition
 competitive
@@ -107,6 +109,7 @@ continental
 contingency
 continuance
 contraction
+contractual
 contraption
 contributor
 controversy
@@ -286,6 +289,7 @@ manufactory
 manufacture
 marketplace
 masterpiece
+materialism
 mathematics
 meaningless
 measurement
@@ -305,6 +309,7 @@ molestation
 multinomial
 nationality
 Neanderthal
+necessitate
 Neitherland
 nightmarish
 nonchalance
@@ -314,6 +319,7 @@ notoriously
 objectivity
 observation
 obstruction
+ontological
 opportunity
 organically
 orientation
