--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -113,6 +113,7 @@ exploitation
 extravagance
 Gemeinschaft
 geometrician
+geopolitical
 gerontocracy
 Gesellschaft
 hallucinogen
@@ -253,6 +254,7 @@ surveillance
 suspiciously
 technologist
 togetherness
+totalitarian
 transcendent
 translucence
 translucency
