--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -26,6 +26,7 @@ comprehension
 comprehensive
 concatenation
 concentration
+conceptualize
 condescending
 configuration
 conflagration
@@ -49,6 +50,7 @@ demonstrative
 deterioration
 determination
 deterministic
+differentiate
 discretionary
 disfiguration
 distinguished
@@ -96,6 +98,7 @@ misunderstood
 monochromatic
 morphogenetic
 multicultural
+multinational
 neighbourhood
 ornamentation
 parallelogram
@@ -103,6 +106,7 @@ participation
 perfectionism
 perfectionist
 perpendicular
+petrochemical
 physiotherapy
 precipitation
 predominantly
