--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -3,10 +3,12 @@ confidentiality
 contemporaneous
 democratization
 dichotomization
+differentiation
 distinguishable
 electrochromism
 electromagnetic
 experimentation
+familiarization
 hypoproteinemia
 interchangeable
 methamphetamine
