--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -455,6 +455,7 @@ fatal
 fault
 favor
 feast
+feign
 femme
 fence
 feral
@@ -736,6 +737,7 @@ lycee
 lymph
 lynch
 lyric
+macho
 madam
 mafia
 magic
