--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -140,6 +140,7 @@ bathroom
 bedazzle
 behavior
 benedict
+bequeath
 betrayal
 beverage
 billiard
@@ -647,6 +648,7 @@ imposter
 impunity
 impurity
 inactive
+inchoate
 incident
 incision
 increase
@@ -913,6 +915,7 @@ paranoid
 parasite
 particle
 passerby
+Passover
 passport
 password
 paternal
