--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -806,6 +806,7 @@ pedophile
 penetrate
 peninsula
 pentagram
+perdition
 perimeter
 periphery
 permanent
@@ -838,6 +839,7 @@ plication
 pluralism
 pneumatic
 poisonous
+politburo
 political
 pollution
 polygraph
@@ -1057,6 +1059,7 @@ supremacy
 surcharge
 surrender
 suspicion
+sweatshop
 symbiosis
 synagogue
 syntactic
