--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -3,10 +3,12 @@ confidentiality ,/n./@機密;,/n./@機密性;
 contemporaneous ,/adj./@同時存在的;,/adj./@同時發生的;,/adj./@同時期的;
 democratization ,/n./@民主化;
 dichotomization ,/n./@二分;
+differentiation ,/n./@區分;,/n./@區別;,/n./@微分;
 distinguishable ,/adj./@可辨别的;
 electrochromism ,/n./@電致色變;,/n./@電致變色;
 electromagnetic ,/adj./@電磁的;,/adj./@電磁體的;
 experimentation ,/n./@试验;
+familiarization ,/n./@熟悉;,/n./@通曉;,/n./@普及;
 hypoproteinemia ,/n./@低蛋白血症;
 interchangeable ,/adj./@可交換的;,/adj./@可交替的;
 methamphetamine ,/n./@甲基苯丙胺;,/n./@脫氧麻黃鹼;,/n./@甲基安非他命;
