--- a/Files/lang/ch/chinese17.csv
+++ b/Files/lang/ch/chinese17.csv
@@ -1,5 +1,7 @@
+conceptualization ,/n./@概念化;
 congregationalism ,/n./@公理宗;,/n./@公理主義;
 congregationalist ,/n./@公理宗教徒;,/n./@公理主義者;
+conscientiousness ,/n./@盡責性;
 conversationalist ,/n./@健谈的人;
 counterproductive ,/adj./@适得其反的;,/adj./@事与愿违的;,/adj./@产生相反效果的;,/adj./@产生相反作用的;
 industrialization ,/n./@工业化;
