--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -23,6 +23,7 @@ adrenaline ,/n./@肾上腺素;
 adulterate ,/v./@摻雜;
 affiliated ,/adj./@附属的;
 affliction ,/n./@苦难;,/n./@苦恼;,/n./@折磨;
+aficionado ,/n./@狂熱愛好者;
 afterwards ,/adv./@後來;,/adv./@之後;
 aggrandize ,/v./@增加;,/n./@提高;
 aggression ,/n./@侵略;
@@ -94,6 +95,7 @@ automotive ,/adj./@汽車的;,/adj./@機動車的;
 autonomous ,/adj./@自主的;,/adj./@自治的;,/adj./@獨立存在的;
 background ,/n./@背景;,/n./@經歷;
 banishment ,/n./@驱逐;,/n./@放逐;
+bankruptcy ,/n./@破產;,/n./@倒閉;,/n./@徹底喪失;
 basketball ,/n./@篮球;
 battleship ,/n./@战舰;,/n./@战列舰;
 beforehand ,/adv./@提前;,/adv./@事先;
@@ -166,6 +168,7 @@ completion ,/n./@完成;,/n./@完滿;
 complexity ,/n./@复杂@性;
 compliance ,/n./@順從;,/n./@遵從;,/n./@應允;
 complicate ,/v./使@复杂化;
+complicity ,/n./@串通;,/n./@共謀;
 compliment ,/n./@恭维;
 comprehend ,/v./@理解;,/v./@领悟;
 compromise ,/v./@妥协;,/vi./@讓步;,/vi./@折衷;,/vt./@連累;,/vt./@放棄;,/vt./@損害;,/vt./@洩露;,/vt./@背離;,/n./@妥協;,/n./@和解;,/n./@折衷;,/n./@讓步;,/n./@連累;,/n./@放棄;,/n./@妥協方案;,/n./@折衷辦法;,/vt./@危及;
@@ -427,6 +430,7 @@ indulgence ,/n./@沉溺;,/n./@放縱;,/n./@縱容;,/n./@嗜好;,/n./@寬容;,/n.
 industrial ,/adj./@工业的;
 inequality ,/n./@不平等;
 inevitable ,/adj./@必然的;,/adj./@不可避免的;
+inexorable ,/adj./@不可阻擋的;,/adj./@無法改變的;
 infarction ,/n./@梗塞;
 infiltrate ,/v./@渗入;,/v./@潜入;,/vt./@滲透;
 infinitive ,/n./@動詞不定式;,/adj./@動詞不定式的;
@@ -504,6 +508,7 @@ meditation ,/n./@冥想;
 megalithic ,/adj./@巨石建造的;,/adj./@巨石時期的;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
+memorandum ,/n./@備忘錄;
 menstruate ,/vi./@行經;,/vi./@月經來潮;
 mercantile ,/adj./@商業的;,/adj./@貿易的;,/adj./@商人的;
 metallurgy ,/n./@冶金学;
@@ -672,6 +677,7 @@ remorseful ,/adj./@懊悔的;,/adj./@悔恨的;
 remunerate ,/vt./@酬勞;
 rendezvous ,/n./@約會;,/n./@會面;,/n./@會合;
 renovation ,/n./@翻新;,/n./@修繕;,/n./@更新;,/n./@修理;
+reparation ,/n./@賠償;,/n./@補償;,/n./@賠償金;,/n./@賠款;
 repatriate ,/v./@遣返;
 repentance ,/n./@悔悟;
 repetition ,/n./@重复;
