--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -27,6 +27,7 @@ appropriate ,/adj./@适当的;
 approximate ,/v./@估计;
 archaeology ,/n./@考古學;
 archipelago ,/n./@群島;,/n./@列島;
+arraignment ,/n./@傳訊;,/n./@提訊;,/n./@指責;,/n./@責難;
 arrangement ,/n./@布置;,/n./@整理;,/n./@准备;
 assassinate ,/v./@刺殺;,/v./@暗殺;
 association ,/n./@协会;
@@ -167,6 +168,7 @@ environment ,/n./@環境;,/n./@周圍;
 equilateral ,/adj./@等邊的;,/adj./@等面的;
 equilibrium ,/n./@平衡;,/n./@均衡;
 equivalence ,/n./@相等;
+eschatology ,/n./@末世論;
 evangelical ,/adj./@福音的;,/adj./@新教的;,/n./@福音派;
 everlasting ,/adj./@永久的;
 examination ,/n./@考试;,/n./@测验;
@@ -192,6 +194,7 @@ fluctuation ,/n./@波動;,/n./@變動;,/n./@動搖;
 fluorescent ,/adj./@螢光的;,/adj./@發亮的;
 foolishness ,/n./@愚蠢;
 forethought ,/n./@先見;,/n./@預謀;
+fornication ,/n./@通姦;
 fortunately ,/adv./@幸運地;,/adv./@幸而;
 Freemasonry ,/n./@共济会;
 frightening ,/adj./@令人恐惧的;
