--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -89,6 +89,7 @@ disagreement ,/n./@争执;,/n./@不符;
 disconsolate ,/adj./@憂鬱的;,/adj./@鬱鬱不樂的;
 discriminate ,/vt./@歧視;,/vt./@辨別;,/vt./@區別;,/vi./@辨別;
 disingenuous ,/adj./@不誠實的;,/adj./@不坦率的;,/adj./@虛偽的;
+dispensation ,/n./@分配;,/n./@特許;,/n./@天命;,/n./@天意;,/n./@神意;
 dissemblance ,/n./@偽裝;
 distillation ,/n./@蒸餾;
 distribution ,/n./@分布;,/n./@分配;
@@ -116,6 +117,7 @@ geometrician ,/n./@幾何學家;
 geopolitical ,/adj./@地緣政治的;,/adj./@地緣政治學的;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
 Gesellschaft ,/n./@社會;,/n./@團體;,/n./@社團;,/n./@協會;,/n./@聚會;,/n./@集會;,/n./@組織;,/n./@機構;
+gobbledegook ,/n./@官腔;,/n./@官樣文章;,/n./@冗長費解的話;
 hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
@@ -207,6 +209,7 @@ possiblility ,/n./@可能性;
 posthumously ,/adv./@死後地;,/adv./@在死後;
 predilection ,/n./@偏好;,/n./@偏爱;,/n./@嗜好;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
+Presbyterian ,/adj./@長老會教會的;,/adj./@長老會的;,/n./@長老會教徒;
 presentation ,/n./@展示;,/n./@提供;,/n./@表演;
 presentiment ,/n./@預感;
 professional ,/adj./@专业的;,/adj./@职业的;
@@ -234,6 +237,7 @@ reprehension ,/n./@指責;,/n./@非難;
 reproduction ,/n./@繁殖;,/n./@複製;,/n./@複製品;,/n./@再生;,/n./@生殖;
 resurrection ,/n./@復活;,/n./@恢復;,/n./@復興;
 satisfaction ,/n./@满足;
+secessionist ,/n./@分離主義者;,/adj./@分離主義的;
 significance ,/n./@重要性;,/n./@意义;
 simultaneous ,/adj./@同时的;
 sledgehammer ,/n./@大錘;
