--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -6,6 +6,7 @@ appropriately ,/adj./@适当的;
 approximately ,/adv./@大约;
 archaeologist ,/n./@考古學家;
 assassination ,/n./@刺杀;
+assertiveness ,/n./@自信;
 authoritative ,/adj./@权威的;,/adj./@權威性的;,/adj./@專斷的;,/adj./@命令式的;
 authorization ,/n./@授权;
 autobiography ,/n./@自传;
@@ -59,6 +60,7 @@ embarrassment ,/n./@難堪;,/n./@尷尬;,/n./@窘迫;,/n./@爲難人的事;,/n./
 entertainment ,/n./@娱乐;
 environmental ,/adj./@環境的;,/adj./@周圍的;
 establishment ,/n./@确立;,/n./@制定;
+excommunicate ,/vt./@開除;,/vt./@開除教籍;
 extermination ,/n./@消灭;,/n./@灭绝;
 extraordinary ,/adj./@特别的;,/adj./@非凡的;
 extrapolation ,/n./@推斷;,/n./@外推;,/n./@外推法;
@@ -120,12 +122,14 @@ psychosomatic ,/adj./@心理压力造成的;
 quadrilateral ,/n./@四邊形;,/adj./@四邊形的;,/adj./@四邊的;
 qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
 questionnaire ,/n./@问卷;
+rectification ,/n./@矯正;,/n./@修正;,/n./@糾正;,/n./@改正;
 regimentation ,/n./@严格控制;,/n./@严密管制;
 reinforcement ,/n./@加强;,/n./@增援;
 replenishment ,/n./@補充;,/n./@再裝滿;,/n./@再備足;
 retrospective ,/adj./@追溯性的;
 reverberation ,/n./@回響;,/n./@餘聲;,/n./@後果;
 righteousness ,/n./@正义;,/n./@公正;
+Russification ,/n./@俄羅斯化;
 sadomasochism ,/n./@受虐狂;
 sanctimonious ,/adj./@假裝聖潔的;,/adj./@假裝虔誠的;,/adj./@假裝誠實的;
 schizophrenic ,/adj./@精神分裂症的;,/n./@精神分裂症患者;
