--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -11,7 +11,9 @@ experimentation ,/n./@试验;
 familiarization ,/n./@熟悉;,/n./@通曉;,/n./@普及;
 hypoproteinemia ,/n./@低蛋白血症;
 interchangeable ,/adj./@可交換的;,/adj./@可交替的;
+interventionist ,/n./@干涉主義者;,/adj./@干涉主義的;,/adj./@干涉主義者的;
 methamphetamine ,/n./@甲基苯丙胺;,/n./@脫氧麻黃鹼;,/n./@甲基安非他命;
+neoconservative ,/n./@新保守主義者;,/adj./@新保守主義的;,/adj./@新保守主義者的;
 neuroplasticity ,/n./@神經可塑性;
 notwithstanding ,/adv./@尽管如此;,/adv./@即使这样;
 perspectiveness ,/n./@前瞻性;
