--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -41,7 +41,7 @@ bait ,/n./@誘餌;,/v./@引誘;
 bake ,/v./@烘焙;
 bald ,/adj./@秃的;,/adj./@光秃的;,/adj./@单调的;,/adj./@磨光的;
 bale ,/n./@包;,/n./@捆;,/n./@災禍;
-balk ,/n./@障礙;,/n./@錯誤;
+balk ,/n./@障礙;,/n./@錯誤;,/vi./@畏縮;,/vi./@畏怯;
 ball ,/n./@球;
 band ,/n./@樂隊;
 bank ,/n./@銀行;,/n./@堤壩;
@@ -817,7 +817,7 @@ quiz ,/n./@測試;
 race ,/n./@種族;,/n./@競賽;
 raft ,/n./@筏;,/n./@浮艇;,/n./@浮臺;
 rage ,/v./@发怒;,/n./@激烈;,/n./@盛怒;
-raid ,/n.//v./@劫掠;,/v./@袭击;
+raid ,/vt./@劫掠;,/v./@袭击;,/vt./@突襲;,/n./@突襲;,/n./@襲擊;,/n./@突然查抄;,/n./@搜捕;,/n./@劫掠;
 rail ,/n./@鐵軌;,/n./@栏杆;,/n./@横杆;,/n./@扶手;
 rain ,/v./@下雨;,/n./@雨;
 rake ,/n./@耙;,/vt./@耙;,/vt./@耙平;
