--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -396,6 +396,7 @@ early ,/adj./@早的;,/adj./@提前的;
 earth ,/n./@地球;
 edema ,/n./@水腫;
 edict ,/n./@詔書;
+edify ,/vt./@教化;
 eerie ,/adj./@怪異的;
 eigen ,/adj./@特征的;,/adj./@本征的;,/adj./@自身的;,/adj./@独特的;
 eight ,/n./@八;
@@ -613,6 +614,7 @@ hello ,/int.//n./@你好;
 hence ,/adv./@因此;
 hepta ,/pref./@七;
 hight ,/v./@取名;
+hijab ,/n./@希賈布;,/n./@哈吉布;
 hobby ,/n./@業余愛好;
 hoist ,/vt./@舉起;,/vt./@升起;,/vt./@吊起;,/vt./@提起;
 hokum ,/n./@噱頭;,/n./@胡言;,/n./@胡扯;
@@ -648,7 +650,7 @@ index ,/n./@索引;,/n./@指標;,/n./@指針;
 India ,/n./@印度;
 indie ,/n./@獨立制片人;,/adj./@獨立的;
 inert ,/adj./@惰性的;,/adj./@遲緩的;,/adj./@呆滯的;,/adj./@無效的;
-infer ,/v./@推論;
+infer ,/v./@推論;,/vt./@推斷;,/vt./@意味著;
 infix ,/n./@中綴;
 infra ,/adj.//pref./@在下;
 inlet ,/n./@入口;,/n./@進口;,/n./@水灣;,/v./@引入;,/v./@嵌入;,/v./@插入;
@@ -1142,7 +1144,7 @@ snail ,/n./@蝸牛;
 snake ,/n./@蛇;
 snark ,/vt./@諷刺;,/vt./@嘲諷;
 sneak ,/v./@溜;,/v./@鬼鬼祟祟地做;
-sneer ,/v./@嘲笑;,/v./@冷笑;
+sneer ,/v./@嘲笑;,/v./@冷笑;,/vt./@譏諷;
 sniff ,/v./@嗅;,/v./@聞;
 snort ,/v./@輕蔑地發出哼聲;
 snuff ,/v./@掐滅;,/v./@撲滅;
@@ -1361,6 +1363,7 @@ unite ,/v./@聯合;,/v./@統一;,/v./@团结;
 unity ,/n./@團結;,/n./@一致;
 untie ,/v./@解开;
 until ,/conj./@直到;
+upend ,/vt./@倒立;,/vt./@倒置;,/vt./@顛倒;
 upper ,/adj./@較髙的;,/adj./@上部的;
 upset ,/v./@攪亂;,/v./@打亂;
 urban ,/adj./@城市的;
