--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -46,7 +46,7 @@ alcove ,/n./@凹处;
 alight ,/adj./@燒著的;
 alkali ,/n./@鹼;
 allege ,/v./@斷言;,/v./@宣稱;
-allude ,/v./@間接提到;
+allude ,/v./@間接提到;,/vi./@間接提及;,/vi./@暗示;
 allure ,/v./@吸引;
 almost ,/adv./@幾乎;
 always ,/adv./@總是;
@@ -557,6 +557,7 @@ excite ,/v./@刺激;
 excuse ,/v./@原諒;,/n./@借口;
 exempt ,/vt./@免除;
 exhale ,/v./@呼氣;
+exhort ,/vt./@規勸;,/vt./@告誡;,/vt./@敦促;,/vt./@激勵;
 exhume ,/v./@掘出;,/vt./@發掘;
 exotic ,/adj./@來自外國的;,/adj./@外來的;,/adj./@異國情調的;,/adj./@外國情調的;,/adj./@奇異的;
 expand ,/v./@擴大;
@@ -688,6 +689,7 @@ greedy ,/adj./@貪婪的;
 grieve ,/v./@悲痛;
 grisly ,/adj./@可怕的;
 grocer ,/n./@雜貨店;
+groove ,/n./@槽;,/n./@轍;,/n./@紋路;,/n./@常規;
 grotto ,/n./@洞穴;,/n./@洞室;
 ground ,/n./@場地;,/n./@地面;,/n./@理由;,/n./@根據;
 growth ,/n./@增長;,/n./@發展;,/n./@生長;
@@ -751,6 +753,7 @@ humble ,/adj./@謙卑的;
 humour ,/n./@幽默;,/n./@詼諧;,/vt./@遷就;
 hunger ,/n./@饑餓;
 hungry ,/adj./@饑餓的;
+hustle ,/vt./@催促;,/vt./@推搡;,/vt./@強迫;,/n./@忙碌;,/n./@奔忙;
 hybrid ,/n./@雜種;,/adj./@混合的;,/adj./@雜交的;,/n./@合成物;,/adj./@雜種的;,/adj./@混合而成的;,/adj./@混血的;
 hyper- ,/pref./@在上;,/pref./@超過;,/pref./@過度;
 iconic ,/adj./@代表性的;,/adj./@偶像級的;,/adj./@符號性的;,/adj./@圖標的;,/adj./@圖符的;
@@ -799,7 +802,7 @@ intuit ,/v./@由直覺知道;
 invade ,/v./@侵略;
 invent ,/v./@发明;,/v./@创造;
 invert ,/v./@轉化;,/v./@翻轉;,/v./@倒置;
-invest ,/v./@投資;
+invest ,/v./@投資;,/vt./@投入;,/vt./@授予;,/vt./@賦予;
 invite ,/v./@邀請;
 invoke ,/vt./@調用;,/vt./@祈求;,/vt./@援引;,/vt./@訴諸;,/vt./@喚起;,/vt./@召喚;
 island ,/n./@島嶼;
@@ -826,6 +829,7 @@ kitten ,/n./@小貓;
 knight ,/n./@騎士;
 kosher ,/adj./@符合猶太教規的;,/adj./@合法的;,/adj./@合適的;,/adj./@潔食的;
 Kosovo ,/n./@科索沃;
+kowtow ,/vi./@叩頭;
 kraken ,/n./@海怪;
 lackey ,/n./@男僕;,/n./@侍從;,/n./@馬屁精;
 ladder ,/n./@梯子;
@@ -864,6 +868,7 @@ lining ,/n./@夾裡;,/n./@襯裡;
 liquid ,/adj./@液態的;,/n./@液體;
 liquor ,/n./@酒;,/n./@汁;
 listen ,/vi./@聽;
+litany ,/n./@連禱文;,/n./@冗長的陳述;
 litter ,/n./@垃圾;,/v./@丟@垃圾;
 little ,/adj./@小的;
 livery ,/n./@制服;,/n./@標誌性色彩;,/n./@公司標誌;
@@ -1012,6 +1017,7 @@ nuance ,/n./@細微差別;
 nudity ,/n./@裸體;,/n./@裸露;
 number ,/n./@數字;,/n./@號碼;,/n./@若干;
 object ,/n./@目標;,/v./@反對;
+oblast ,/n./@州;
 oblige ,/v./@迫使;,/v./@施恩@惠;
 oblong ,/adj./@橢圓形的;,/adj./@矩形的;
 obsess ,/v./@迷住;,/v./@迷戀;,/v./@著迷;
