--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -121,6 +121,7 @@ bailout ,/n./@緊急財政援助;,/n./@財務救濟;,/n./@紓困;
 baklava ,/n./@蜜糖果仁千层酥;,/n./@果仁蜜饼;
 balance ,/n./@平衡;
 balcony ,/n./@陽台;,/n./@露台;,/n./@包廂;,/n./@樓廳;
+Balkans ,/n./@巴爾幹半島;
 balloon ,/n./@氣球;
 baloney ,/n./@胡話;,/n./@瞎扯;,/n./@胡扯;,/n./@胡說;
 baptise ,/v./@施洗;,/v./@洗禮;,/v./@洗滌;
@@ -533,6 +534,7 @@ epicure ,/n./@美食家;,/n./@老饕;,/n./@享樂主義者;,/adj./@美食的;
 epigram ,/n./@警句;
 episode ,/n./@集;,/n./@插曲;,/n./@情節;
 epitaph ,/n./@墓志銘;
+epochal ,/adj./@劃時代的;,/adj./@新紀元的;,/adj./@意義重大的;
 erasure ,/n./@消除;,/n./@擦除;,/n./@清除;
 erosion ,/n./@腐蝕;
 erratic ,/adj./@不穩定的;,/adj./@無規律的;,/adj./@飄忽不定的;,/adj./@难以预测的;,/adj./@難以捉摸的;
@@ -553,6 +555,7 @@ excerpt ,/n./@摘錄;,/n./@引用;,/n./@節選;,/n./@節錄;,/vt./@摘錄;,/vt./
 exclaim ,/v./@呼喊;,/v./@感嘆;
 exclude ,/v./@排除;,/v./@排斥;
 execute ,/v./@執行;
+exegete ,/n./@註釋家;,/n./@評註家;
 exhaust ,/v./@枯竭;
 exhibit ,/v./@展示;,/v./@展出;,/v./@展覽;
 expanse ,/n./@廣闊;
@@ -879,6 +882,7 @@ midwife ,/n./@助产士;
 migrant ,/n./@移居者;
 migrate ,/v./@移居;
 million ,/n./@百萬;
+mimicry ,/n./@模仿;
 minaret ,/n./(of mosque)@宣禮塔;
 mindful ,/adj./@留心的;,/adj./@警覺的;,/adj./@注意的;,/adj./@留意的;
 mineral ,/n./@礦物;,/adj./@礦物的;
@@ -978,6 +982,7 @@ outpost ,/n./@前哨;,/n./@边远居民点;
 outrage ,/n./@激怒;
 outrank ,/v./@髙于;
 outside ,/prep./在...之@外;
+ovation ,/n./@熱烈鼓掌;,/n./@熱烈歡迎;
 overall ,/adj./@總的;,/adj./@全面的;
 overlap ,/v./@重叠;,/v./@重复;
 oxidize ,/vt./@氧化;
@@ -1074,6 +1079,7 @@ possess ,/v./@擁有;,/v./@佔有;
 postage ,/n./@郵資;,/n./@郵費;
 postfix ,/n./@后綴;
 posture ,/n./@姿勢;,/n./@姿態;,/n./@儀態;,/n./@情形;,/n./@態勢;,/n./@立場;,/n./@態度;
+pothole ,/n./@壺洞;,/n./@洞坑;,/n./@壺穴;
 pottery ,/n./@瓷器;
 poultry ,/n./@家禽;
 poverty ,/n./@貧窮;,/n./@缺乏;
@@ -1159,11 +1165,13 @@ raffish ,/adj./@卑鄙的;,/adj./@無賴的;
 railway ,/n./@鐵路;
 raiment ,/n./@衣服;
 rainbow ,/n./@彩虹;
-rampage ,/n./@暴怒;,/n./@暴走;
+rampage ,/n./@暴怒;,/n./@暴走;,/n./@橫衝直撞;,/n./@胡作非為;,/n./@撒野;
+rampant ,/adj./@猖獗的;,/adj./@蔓延的;,/adj./@泛濫的;,/adj./@肆虐的;,/adj./@繁茂的;,/adj./@狂暴的;,/adj./@放縱的;
 rapidly ,/adv./@快速地;
 rapture ,/n./@狂喜;,/n./@著迷;,/n./@痴迷;
 reality ,/n./@事實;,/n./@實際;,/n./@眞實;
 realize ,/v./@實現;,/v./@意識到;
+realtor ,/n./@房地產經紀人;
 rebirth ,/n./@復活;
 rebound ,/v./@囘彈;
 rebuild ,/v./@重建;
@@ -1467,6 +1475,7 @@ trooper ,/n./@騎兵;,/n./@騎警;,/n./@傘兵;
 tropics ,/n./@熱帶;,/n./@熱帶地區;
 trouble ,/n./@麻煩;
 trumpet ,/n./@喇叭;
+tsarist ,/adj./@沙皇統治的;,/adj./@沙皇的;,/n./@沙皇制度擁護者;
 Tuesday ,/n./@星期二;
 tuition ,/n./@學費;
 turbine ,/n./@渦輪機;,/n./@渦輪;
