--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -50,6 +50,7 @@ allergic ,/adj./@过敏性的;
 Alliance ,/n./@联盟;
 allocate ,/v./@分配;
 allotted ,/adj./@专款的;,/adj./@拨出的@<allot的过去式>;
+allusion ,/n./@間接提及;,/n./@提及;,/n./@影射;,/n./@暗示;
 alphabet ,/n./@字母表;
 altitude ,/n./@高度;
 altruism ,/n./@利他主義;
@@ -112,7 +113,7 @@ assassin ,/n./@刺客;
 assemble ,/v./@集合;,/v./@装配;
 assembly ,/n./@裝配;,/n./@集合;,/n./@集會;
 asterisk ,/n./@星號;
-asteroid ,/n./@小行星;
+asteroid ,/n./@小行星;,/adj./@星狀的;
 astonish ,/v./使@惊讶;
 atrocity ,/n./@暴行;,/n./@凶恶;,/n./@残暴;,/n./@殘酷;
 attendee ,/n./@出席者;
@@ -288,6 +289,7 @@ cosmetic ,/n./@化妝品;,/n./@裝飾品;,/adj./@美容的;,/adj./@化妝用的;
 cosmical ,/adj./@宇宙的;,/adj./@廣大無邊的;
 couldn't ,/v./@不能;
 courtesy ,/n./@礼貌;
+covenant ,/n./@契約;
 coverage ,/n./@覆盖@范围;,/n./@新闻报道;
 coziness ,/n./@舒適;,/n./@安逸;,/n./@愜意;
 creation ,/n./@創造;
@@ -400,6 +402,7 @@ divinity ,/n./@神性;,/n./@神;,/n./@神學;
 division ,/n./@分开;
 doctrine ,/n./@教义;,/n./@学说;,/n./@信条;
 document ,/n./@文件;
+dogmatic ,/adj./@教義的;,/adj./@教條的;,/adj./@武斷的;
 domestic ,/adj./@本国的;,/adj./@國內的;,/adj./@家庭的;,/adj./@馴養的;
 dominant ,/adj./@显性的;
 dominate ,/v./@控制;,/v./@支配;,/v./@统治;
@@ -513,7 +516,7 @@ feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;,/adj./@女性化
 fentanyl ,/n./@芬太尼;
 ferocity ,/n./@兇猛;,/n./@殘暴;
 festival ,/n./@节日;
-fidelity ,/n./@忠誠;
+fidelity ,/n./@忠誠;,/n./@忠貞;,/n./@精確;
 filicide ,/n./@杀害子女;
 firework ,/n./@烟花;
 flagship ,/n./@旗舰;
@@ -927,7 +930,7 @@ pedestal ,/n./@基架;,/n./@基座;,/n./@基础;,/n./@支持;
 pedicure ,/n.//v./@修脚;,/n.//v./@足療;
 pedigree ,/n./@血统;,/adj./@纯种的;
 peerless ,/adj./@無與倫比的;,/adj./@無雙的;,/adj./@無可匹敵的;,/adj./@舉世無雙的;,/adj./@絕世的;
-penalize ,/v./@惩罚;
+penalize ,/v./@惩罚;,/vt./@處罰;,/vt./@處刑;
 pendulum ,/n./@摆;
 penitent ,/adj./@懺悔的;,/adj./@悔過的;
 pentacle ,/n./@五角星;,/n./@護身符;
@@ -1011,6 +1014,7 @@ Qabalist ,/redirected./@target="Kabbalist";
 quackery ,/n./@庸医的医术;,/n./@欺骗行为;
 quantity ,/n./@量;
 question ,/n./@问题;
+radiance ,/n./@光輝;,/n./@容光煥發;
 railroad ,/n./@鐵路;,/v./@威脅;
 raincoat ,/n./@雨衣;
 rainfall ,/n./@下雨;,/n./@降雨;,/n./@降雨量;
@@ -1034,7 +1038,7 @@ relative ,/n./@亲戚;
 relegate ,/v./@降級到;,/v./@貶謫;,/v./@放逐;,/v./@移交;,/v./@歸入;
 relevant ,/adj./@相关的;
 reliable ,/adj./@可靠的;
-reliance ,/n./@依賴;,/n./@依靠;
+reliance ,/n./@依賴;,/n./@依靠;,/n./@信賴;,/n./@信任;
 religion ,/n./@宗教;
 remember ,/v./@记得;,/v./@想起;,/v./@記住;
 renegade ,/adj./@叛教的;,/n./@叛徒;,/adj./@反叛的;,/n./@叛逆者;
@@ -1324,6 +1328,7 @@ wasteful ,/adj./@挥霍的;
 watchful ,/adj./@注意的;,/adj./@警惕的;
 waterpot ,/n./@水罐;
 weakness ,/n./@弱点;
+weaponry ,/n./@武器;
 werewolf ,/n./@狼人;
 whatever ,/pron./@無論什麼;
 whenever ,/conj./@無論何時;
