--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -102,6 +102,7 @@ associate ,/v./@联系;
 assurance ,/n./@保证;,/n./@确信;
 astrology ,/n./@占星術;,/n./@占星學;
 astronomy ,/n./@天文學;
+atonement ,/n./@贖罪;,/n./@補償;
 attention ,/n./@注意;
 attentive ,/adj./@注意的;,/adj./@留意的;
 attribute ,/n./@属性;,/n./@特质;
@@ -227,7 +228,7 @@ collision ,/v./@冲突;,/v./@抵触;,/v./@碰撞;
 collocate ,/n./@布置;
 colloquia ,/redirected./@target="colloquium";
 Colosseum ,/n./@羅馬圓形大競技場;
-commingle ,/v./@充分混合;
+commingle ,/v./@充分混合;,/v./@摻和;,/v./@混合;,/v./@合併;
 commissar ,/n./@政治委员;,/n./@人民委员;
 committee ,/n./@委員會;
 commodity ,/n./@商品;
@@ -681,6 +682,7 @@ longitude ,/n./@经度;
 lubricant ,/n./@潤滑劑;,/adj./@潤滑的;
 lubricate ,/v./@潤滑;
 lucrative ,/adj./@賺錢的;,/adj./@有利可圖的;
+ludicrous ,/adj./@荒唐可笑的;,/adj./@滑稽的;
 luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
 Macedonia ,/n./@馬其頓;
 machinery ,/n./@机械;
@@ -693,6 +695,7 @@ Mancunian ,/n./@曼徹斯特人;,/n./@曼徹斯特方言;,/adj./@曼徹斯特的
 manifesto ,/n./@宣言;
 mannequin ,/n./@人体模型;
 manoeuvre ,/n./@机动动作;,/n./@策略;,/vt./@熟练地移动;,/vt./@操纵;,/vt./@施展策略;,/n./@演习;
+Maranatha ,/n./@瑪拉拿他;,/n./@主必要來;
 margarine ,/n./@人造黃油;,/n./@人造奶油;
 marijuana ,/n./@大麻;
 marvelous ,/adj./@了不起的;,/adj./@非凡的;,/adj./@令人惊异的;,/adj./@不平常的;
@@ -707,8 +710,9 @@ mechanics ,/n./@力学;,/n./@机械学;
 mechanism ,/n./@机制;
 melodrama ,/n./@情節劇;,/n./@戏剧性事件;,/n./@傳奇劇;
 menstrual ,/adj./@月经的;
+mentality ,/n./@心態;,/n./@精神性;,/n./@心理狀態;
 mesmerize ,/v./@吸引;,/vt./@迷惑;,/vt./@迷住;,/vt./@催眠;
-messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;
+messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;,/adj./@以救世主自居的;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
 methadone ,/n./@美沙酮;
@@ -728,6 +732,7 @@ monastery ,/n./@修道院;,/n./@寺院;
 monologue ,/n./@獨白;
 monstrous ,/adj./@可怕的;,/adj./@極惡的;
 moscovium ,/n./@鏌;
+motorcade ,/n./@車隊;,/n./@汽車隊列;,/n./@汽車行列;
 moustache ,/n./@胡子;,/n./@胡须;
 mysticism ,/n./@神祕主義;,/n./@玄想;,/n./@通靈;
 mythology ,/n./@神話;,/n./@神話學;,/n./@神話集;
@@ -806,6 +811,7 @@ pedophile ,/redirected./@target="paedophile";
 penetrate ,/v./@渗透;,/v./@穿透;,/v./@貫穿;
 peninsula ,/n./@半島;
 pentagram ,/n./@五角星;,/n./@五角星形;
+Pentecost ,/n./@聖靈降臨節;,/n./@五旬節;
 perdition ,/n./@萬劫不復;,/n./@毀滅;,/n./@地獄;
 perimeter ,/n./@周長;,/n./@周界;
 periphery ,/n./@圓周;,/n./@周圍;,/n./@外围;,/n./@次要位置;,/n./@次要部分;,/n./@體表;,/n./@末梢;
@@ -820,6 +826,7 @@ petroleum ,/n./@石油;
 petulance ,/n./@易怒;,/n./@暴躁;
 pharaonic ,/adj./@法老的;,/adj./@法老時代的;
 pheromone ,/n./@信息素;
+philology ,/n./@文獻學;,/n./@語言學;
 Phoenicia ,/n./@腓尼基;
 phonetics ,/n./@語音學;
 phonology ,/n./@音系學;,/n./@音系;,/n./@語音體系;
@@ -1002,6 +1009,7 @@ sexuality ,/n./@性慾;
 shamanism ,/n./@黃教;,/n./@萨满教;
 sharpener ,/n./@削筆刀;,/n./@磨刀石;
 sharpness ,/n./@鋒利;,/n./@銳利;,/n./@敏銳;,/n./@鮮明;,/n./@清晰;,/n./@急劇;,/n./@敏捷;,/n./@精明;,/n./@苛刻;,/n./@嚴厲;
+shockwave ,/redirected./@target="shock wave";
 shootdown ,/n./@击落;
 shouldn't ,/v./@不能;
 signature ,/n./@署名;
