--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -23,6 +23,7 @@ adrenaline
 adulterate
 affiliated
 affliction
+aficionado
 afterwards
 aggrandize
 aggression
@@ -94,6 +95,7 @@ automotive
 autonomous
 background
 banishment
+bankruptcy
 basketball
 battleship
 beforehand
@@ -166,6 +168,7 @@ completion
 complexity
 compliance
 complicate
+complicity
 compliment
 comprehend
 compromise
@@ -427,6 +430,7 @@ indulgence
 industrial
 inequality
 inevitable
+inexorable
 infarction
 infiltrate
 infinitive
@@ -504,6 +508,7 @@ meditation
 megalithic
 melancholy
 membership
+memorandum
 menstruate
 mercantile
 metallurgy
@@ -672,6 +677,7 @@ remorseful
 remunerate
 rendezvous
 renovation
+reparation
 repatriate
 repentance
 repetition
