--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -27,6 +27,7 @@ appropriate
 approximate
 archaeology
 archipelago
+arraignment
 arrangement
 assassinate
 association
@@ -167,6 +168,7 @@ environment
 equilateral
 equilibrium
 equivalence
+eschatology
 evangelical
 everlasting
 examination
@@ -192,6 +194,7 @@ fluctuation
 fluorescent
 foolishness
 forethought
+fornication
 fortunately
 Freemasonry
 frightening
