--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -89,6 +89,7 @@ disagreement
 disconsolate
 discriminate
 disingenuous
+dispensation
 dissemblance
 distillation
 distribution
@@ -116,6 +117,7 @@ geometrician
 geopolitical
 gerontocracy
 Gesellschaft
+gobbledegook
 hallucinogen
 heterosexual
 hieroglyphic
@@ -207,6 +209,7 @@ possiblility
 posthumously
 predilection
 prerequisite
+Presbyterian
 presentation
 presentiment
 professional
@@ -234,6 +237,7 @@ reprehension
 reproduction
 resurrection
 satisfaction
+secessionist
 significance
 simultaneous
 sledgehammer
