--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -6,6 +6,7 @@ appropriately
 approximately
 archaeologist
 assassination
+assertiveness
 authoritative
 authorization
 autobiography
@@ -59,6 +60,7 @@ embarrassment
 entertainment
 environmental
 establishment
+excommunicate
 extermination
 extraordinary
 extrapolation
@@ -120,12 +122,14 @@ psychosomatic
 quadrilateral
 qualification
 questionnaire
+rectification
 regimentation
 reinforcement
 replenishment
 retrospective
 reverberation
 righteousness
+Russification
 sadomasochism
 sanctimonious
 schizophrenic
