--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -11,7 +11,9 @@ experimentation
 familiarization
 hypoproteinemia
 interchangeable
+interventionist
 methamphetamine
+neoconservative
 neuroplasticity
 notwithstanding
 perspectiveness
