--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -396,6 +396,7 @@ early
 earth
 edema
 edict
+edify
 eerie
 eigen
 eight
@@ -613,6 +614,7 @@ hello
 hence
 hepta
 hight
+hijab
 hobby
 hoist
 hokum
@@ -1361,6 +1363,7 @@ unite
 unity
 untie
 until
+upend
 upper
 upset
 urban
