--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -557,6 +557,7 @@ excite
 excuse
 exempt
 exhale
+exhort
 exhume
 exotic
 expand
@@ -688,6 +689,7 @@ greedy
 grieve
 grisly
 grocer
+groove
 grotto
 ground
 growth
@@ -751,6 +753,7 @@ humble
 humour
 hunger
 hungry
+hustle
 hybrid
 hyper-
 iconic
@@ -826,6 +829,7 @@ kitten
 knight
 kosher
 Kosovo
+kowtow
 kraken
 lackey
 ladder
@@ -864,6 +868,7 @@ lining
 liquid
 liquor
 listen
+litany
 litter
 little
 livery
@@ -1012,6 +1017,7 @@ nuance
 nudity
 number
 object
+oblast
 oblige
 oblong
 obsess
