--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -121,6 +121,7 @@ bailout
 baklava
 balance
 balcony
+Balkans
 balloon
 baloney
 baptise
@@ -533,6 +534,7 @@ epicure
 epigram
 episode
 epitaph
+epochal
 erasure
 erosion
 erratic
@@ -553,6 +555,7 @@ excerpt
 exclaim
 exclude
 execute
+exegete
 exhaust
 exhibit
 expanse
@@ -879,6 +882,7 @@ midwife
 migrant
 migrate
 million
+mimicry
 minaret
 mindful
 mineral
@@ -978,6 +982,7 @@ outpost
 outrage
 outrank
 outside
+ovation
 overall
 overlap
 oxidize
@@ -1074,6 +1079,7 @@ possess
 postage
 postfix
 posture
+pothole
 pottery
 poultry
 poverty
@@ -1160,10 +1166,12 @@ railway
 raiment
 rainbow
 rampage
+rampant
 rapidly
 rapture
 reality
 realize
+realtor
 rebirth
 rebound
 rebuild
@@ -1467,6 +1475,7 @@ trooper
 tropics
 trouble
 trumpet
+tsarist
 Tuesday
 tuition
 turbine
