--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -50,6 +50,7 @@ allergic
 Alliance
 allocate
 allotted
+allusion
 alphabet
 altitude
 altruism
@@ -288,6 +289,7 @@ cosmetic
 cosmical
 couldn't
 courtesy
+covenant
 coverage
 coziness
 creation
@@ -400,6 +402,7 @@ divinity
 division
 doctrine
 document
+dogmatic
 domestic
 dominant
 dominate
@@ -1011,6 +1014,7 @@ Qabalist
 quackery
 quantity
 question
+radiance
 railroad
 raincoat
 rainfall
@@ -1324,6 +1328,7 @@ wasteful
 watchful
 waterpot
 weakness
+weaponry
 werewolf
 whatever
 whenever
