--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -102,6 +102,7 @@ associate
 assurance
 astrology
 astronomy
+atonement
 attention
 attentive
 attribute
@@ -681,6 +682,7 @@ longitude
 lubricant
 lubricate
 lucrative
+ludicrous
 luxurious
 Macedonia
 machinery
@@ -693,6 +695,7 @@ Mancunian
 manifesto
 mannequin
 manoeuvre
+Maranatha
 margarine
 marijuana
 marvelous
@@ -707,6 +710,7 @@ mechanics
 mechanism
 melodrama
 menstrual
+mentality
 mesmerize
 messianic
 metabolic
@@ -728,6 +732,7 @@ monastery
 monologue
 monstrous
 moscovium
+motorcade
 moustache
 mysticism
 mythology
@@ -806,6 +811,7 @@ pedophile
 penetrate
 peninsula
 pentagram
+Pentecost
 perdition
 perimeter
 periphery
@@ -820,6 +826,7 @@ petroleum
 petulance
 pharaonic
 pheromone
+philology
 Phoenicia
 phonetics
 phonology
@@ -1002,6 +1009,7 @@ sexuality
 shamanism
 sharpener
 sharpness
+shockwave
 shootdown
 shouldn't
 signature
